maj filtres et recherche + ajout update db + maj README